--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "@types/react-dom": "^18",
