--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "@tabler/icons-react": "^3.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
