--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.16.1",
     "@sendgrid/mail": "^8.1.3",
     "@tabler/icons-react": "^3.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.4",
+    "next": "^14.2.17",
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
